--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,13 @@
 {
-  "presets": ["@babel/env"]
+  "presets": ["@babel/env"],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "@": "./src"
+        }
+      }
+    ]
+  ]
 }
