--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js --exec babel-node",
-    "start": "babel-node src/index.js"
+    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -18,13 +19,13 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/core": "^7.22.9",
-    "@babel/node": "^7.22.6",
-    "@babel/preset-env": "^7.22.9",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.0",
     "nodemon": "^3.0.1",
     "prettier": "3.0.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
