--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.6.0"
-    "express": "^4.18.2",
+    "mysql2": "^3.6.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "uuid": "^9.0.0"
