--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.6.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "reflect-metadata": "^0.1.13",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.0",
     "@babel/cli": "^7.22.9",
     "@babel/core": "^7.22.9",
     "@babel/node": "^7.22.6",
     "@babel/preset-env": "^7.22.9",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.5.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "nodemon": "^3.0.1",
     "prettier": "3.0.0",
