--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+
+    //"noImplicitAny": true,
+    //"noImplicitThis": true,
+    //"strictNullChecks": true,
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
