--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "@babel/core": "^7.22.9",
     "@babel/node": "^7.22.6",
     "@babel/preset-env": "^7.22.9",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^20.5.0",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "babel-plugin-module-resolver": "^5.0.0",
     "nodemon": "^3.0.1",
     "prettier": "3.0.0",
