--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
     "sourceMap": true,
     "esModuleInterop": true,
 
-    //"noImplicitAny": true,
-    //"noImplicitThis": true,
-    //"strictNullChecks": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
