--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node src/index.ts",
+    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node src/index.ts --ignore views/uploads",
     "start": "ts-node src/index.ts",
     "build": "tsc"
   },
@@ -16,8 +16,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "uuid": "^9.0.0"
   },
