Feat: add path-alias to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
+
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
