--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.5.0",
     "@types/swagger-jsdoc": "^6.0.1",
