feat: typescript path alias

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node src/index.ts --ignore views/uploads",
-    "start": "ts-node src/index.ts",
+    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node -r tsconfig-paths/register src/index.ts --ignore views/uploads",
+    "start": "ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc"
   },
   "author": "",
@@ -47,6 +47,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   }
 }
