--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "path": "^0.12.7",
+    "promise-mysql": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "uuid": "^9.0.0"
   },
