--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1439.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "path": "^0.12.7",
     "promise-mysql": "^5.2.0",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.32.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
