--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.395.0",
     "aws-sdk": "^2.1439.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
