--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@aws-sdk/client-s3": "^3.395.0",
     "aws-sdk": "^2.1439.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
