--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "path": "^0.12.7",
@@ -47,6 +47,7 @@
     "@types/node": "^20.5.0",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "nodemon": "^3.0.1",
     "prettier": "3.0.0",
