--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.4",
     "path": "^0.12.7",
     "promise-mysql": "^5.2.0",
     "reflect-metadata": "^0.1.13",
@@ -45,6 +46,7 @@
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.5.0",
+    "@types/nodemailer": "^6.4.9",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
