--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.9.4",
     "path": "^0.12.7",
     "promise-mysql": "^5.2.0",
+    "redis": "^4.6.8",
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.32.5",
     "uuid": "^9.0.0"
