--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node -r tsconfig-paths/register src/index.ts --ignore views/uploads",
-    "start": "ts-node -r tsconfig-paths/register src/index.ts",
+    "dev": "cross-env TS_NODE_FILES=true nodemon --watch src/**/* -e ts,tsx --exec ts-node -r tsconfig-paths/register src/index.ts --ignore views/uploads",
+    "start": "cross-env TS_NODE_FILES=true ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
