--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
   - deploy_to_s3
 
 variables:
-  AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+  AWS_DEFAULT_REGION: ap-northeast-2
   AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
   AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
   S3_BUCKET: $S3_BUCKET
