--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,14 @@ variables:
   AWS_DEFAULT_REGION: ap-northeast-2
   AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
   AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-  S3_BUCKET: $S3_BUCKET
+  S3_BUCKET: elice-artsy-bucket
 
 deploy_to_s3:
   stage: deploy_to_s3
   script:
+    - echo "Debugging environment variables:"
+    - echo "AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION"
+    - echo "S3_BUCKET: $S3_BUCKET"
     - apt-get update -y
     - apt-get install -y zip
     - zip -r my-express-app.zip .
