--- a/appspec.yml
+++ b/appspec.yml
@@ -10,3 +10,21 @@ permissions:
     pattern: '**'
     owner: ubuntu
     group: ubuntu
+
+hooks:
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: ubuntu
+  BeforeInstall:
+    - location: scripts/move_previous.sh
+      timeout: 300
+      runas: ubuntu
+  AfterInstall:
+    - location: scripts/install_dependencies.sh
+      timeout: 300
+      runas: ubuntu
+  ApplicationStart:
+    - location: scripts/start_server.sh
+      timeout: 300
+      runas: ubuntu
