--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ variables:
   AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
   AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
   S3_BUCKET: elice-artsy-bucket
+  S3_ZIP: my-express-app.zip
 
 deploy_to_s3:
   stage: deploy_to_s3
@@ -17,8 +18,13 @@ deploy_to_s3:
     - echo "S3_BUCKET $S3_BUCKET"
     - apt-get update -y
     - apt-get install -y zip
-    - zip -r my-express-app.zip .
+    - zip -r $S3_ZIP .
     - pip install awscli
-    - aws s3 cp my-express-app.zip s3://$S3_BUCKET/dev/my-express-app.zip
+    - aws s3 cp $S3_ZIP s3://$S3_BUCKET/dev/$S3_ZIP
+    - aws deploy create-deployment
+      --application-name artsy-codedeploy
+      --deployment-config-name CodeDeployDefault.OneAtATime
+      --deployment-group-name dev
+      --s3-location bucket=$S3_BUCKET,bundleType=zip,key=dev/$S3_ZIP
   only:
     - dev
